--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>i love you so much to the edge of the universe and back ૮꒰ྀི⸝⸝> . <⸝⸝꒱ྀིა </p>
         </div>
         <center>
-        <audio id="bgAudio" control autoplay loop src="sunny days.mp3"></audio>
+        <audio id="bgAudio" controls autoplay loop src="sunny days.mp3"></audio>
         </center>
     </div>
     </div>
